# fre

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  fre_continuity.md
artifacts/json/: fre_g900_bounce_negative_controls_audit_001.json  fre_g900_bounce_reference_audit_001.json  fre_g900_checkpoint_audit_001.json  fre_g900_generator_target_congruence_audit_001.json  fre_g900_native_generator_checkpoint_audit_001.json  fre_g900_native_generator_execution_audit_001.json  fre_g900_payload_provenance_001.json  fre_g900_sibling_negative_control_audit_001.json  fre_g900_structural_audit_001.json  fre_g900_target_canonicalization_audit_001.json  fre_openfhe_durable_prefix_001.json  fre_openfhe_executed_profile_provenance_001.json  fre_openfhe_link_status_audit_001.json  fre_support_mode_openfhe_execution_audit_001.json  fre_support_mode_openfhe_receipt_audit_001.json  fre_support_mode_reference_audit_001.json  fre_support_mode_reference_audit_002.json
artifacts/receipts/: fre_g900_recursive_host_unavailable_v000_001.json  fre_support_mode_receipt_balanced_exchange_10_001.json  fre_support_mode_receipt_balanced_exchange_20_001.json  fre_support_mode_receipt_regular_uniform_10_001.json  fre_support_mode_receipt_regular_uniform_20_001.json
contracts/: fre_g900_bounce_grammar_v0.1.json  fre_g900_bounce_negative_control_execution_gate_v0.1.json  fre_g900_bounce_negative_controls_v0.1.json  fre_g900_bounce_reference_execution_gate_v0.1.json  fre_g900_generator_target_comparison_gate_v0.1.json  fre_g900_native_generator_execution_gate_v0.1.json  fre_g900_native_generator_v0.1.json  fre_g900_recursive_host_v0.1.json  fre_g900_sibling_negative_control_execution_gate_v0.1.json  fre_g900_sibling_negative_control_gate_v0.1.json  fre_g900_status_receipt_gate_v0.1.json  fre_g900_target_canonicalization_gate_v0.1.json  fre_support_mode_openfhe_execution_gate_v0.1.json  fre_support_mode_regularity_v0.1.json  fre_support_mode_regularity_v0.2.json
docs/: 00-overview-and-continuity.md  01-folded-receipt-envelope-model.md  02-contracts-and-gates.md  03-receipts-and-schemas.md  04-audit-layer.md  05-fixtures-and-source-material.md  06-support-mode-reference-system.md  07-g900-envelope-workflow.md  08-openfhe-backend-boundary.md  09-cli-build-and-test-surface.md  10-tool-index.md  11-notes-and-human-checkpoints.md  12-artifact-index.md  13-sysop-runbook.md  14-glossary.md  15-repository-map.md  README.md
fixtures/g900/: carrier_signing_table.csv  g15_slot_edges.csv  sibling_candidate_signing_table.csv  sibling_signing_delta.csv  sibling_x_sigma_edges.csv  x_sigma_edges.csv
fixtures/json/: fre_support_mode_fixture_set_v0.1.json
include/fre/: openfhe_backend_status.hpp  openfhe_support_mode.hpp  support_mode.hpp
notes/: boundary.md  fre_local_milestone_progress_report_001.md  g900_bounce_checkpoint_001.md  g900_native_generator_checkpoint_001.md  g900_recursive_host_checkpoint_001.md  openfhe_support_mode_throughline_001.md
schemas/: fre_g900_recursive_host_receipt_v0.1.schema.json  fre_support_mode_receipt_v0.1.schema.json  fre_support_mode_receipt_v0.2.schema.json
src/: support_mode_reference.cpp
src/backends/openfhe/: openfhe_backend_status.cpp  openfhe_support_mode.cpp
src/cli/: fre_openfhe_status.cpp  fre_openfhe_support_mode_smoke.cpp  fre_support_reference.cpp
tools/: audit_g900_bounce_negative_controls.py  audit_g900_bounce_reference.py  audit_g900_checkpoint.py  audit_g900_generator_target_congruence.py  audit_g900_native_generator_checkpoint.py  audit_g900_native_generator_execution.py  audit_g900_sibling_negative_control.py  audit_g900_target_canonicalization.py  audit_openfhe_execution.py  audit_openfhe_link_status.py  audit_openfhe_receipts.py  audit_reference_fixtures.py  canonicalize_g900_target.py  compare_g900_generator_target.py  emit_g900_status_receipt.py  emit_openfhe_receipts.py  generate_g900_kernel.py  generate_g900_sibling_control.py  pin_openfhe_executed_profile.py  prepare_openfhe_execution_gate.py  run_g900_bounce_negative_controls.py  run_g900_bounce_reference.py  validate_g900_payload.py
